--- a/index.html
+++ b/index.html
@@ -10,17 +10,99 @@
 
     <header>
         <nav>
-            <div class="container"></div>
+            <div class="container">
+                <img src="./img/Logo.svg" alt="Icon Logo" class="logo">
+                <ul>
+                    <li>
+                        <a href="#">Equipment</a>
+                    </li>
+                    <li>
+                        <a href="#">About us</a>
+                    </li>
+                    <li>
+                        <a href="#">Blog</a>
+                    </li>
+                </ul>
+                <button>
+                    <img src="./img/icon-user.svg" alt="User">
+                    <span>Account</span>
+                </button>
+            </div>
         </nav>
 
+        <img src="./img/HG.png" alt="" class="first">
+        <img src="./img/MG.png" alt="" class="second">
+        <img src="./img/VG.png" alt="" class="thrid">
+
         <div class="header-content">
-            <div class="container"></div>
+            <div class="container">
+                <div class="follow">
+                    <img src="./img/Social.svg" alt="Icon">
+                </div>
+                <div class="description">
+                    <img src="./img/what.svg" alt="img">
+                    <h1 class="header-title">Be prepared for the Mountains and beyond!</h1>
+                    <img src="./img/what2.svg" alt="img">
+                </div>
+                <div class="start">
+                    <img src="./img/Slider.png" alt="img">
+                </div>
+            </div>
         </div>
     </header>
 
     <main>
-        <section>
-            <div class="container"></div>
+        <section class="sect1">
+            <div class="container">
+                <div class="content-container content1">
+                    <div class="content-box">
+                        <div class="content-description">
+                            <img src="./img/Tagline1.png" alt="Icon">
+                            <h2>What level of  hiker are you?</h2>
+                            <p>Determining what level of hiker you are can be an important tool when planning future hikes. This hiking level guide will help you plan hikes according to different hike ratings set by various websites like All Trails and Modern Hiker. What type of hiker are you – novice, moderate, advanced moderate, expert, or expert backpacker? </p>
+                            <button>
+                                <span>read more</span>
+                                <img src="./img/arrow.png" alt="">
+                            </button>
+                        </div>
+                        <img src="./img/01.png" alt="Photo" class="content-img">
+                    </div>
+                    <span class="img01 img001">01</span>
+                </div>
+
+                <div class="content-container content2">
+                    <span class="img02 img001">02</span>
+                    <div class="content-box">
+                        <img src="./img/01.png" alt="Photo" class="content-img">
+                        <div class="content-description">
+                            <img src="./img/Tagline2.png" alt="Icon">
+                            <h2>Picking the right Hiking Gear!</h2>
+                            <p>The nice thing about beginning hiking is that you don’t really need any special gear, you can probably get away with things you already have.
+                                Let’s start with clothing. A typical mistake hiking beginners make is wearing jeans and regular clothes, which will get heavy and chafe wif they get sweaty or wet.</p>
+                            <button>
+                                <span>read more</span>
+                                <img src="./img/arrow.png" alt="">
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="content-container content3">
+                    <div class="content-box">
+                        <div class="content-description">
+                            <img src="./img/Tagline3.png" alt="Icon">
+                            <h2>Understand Your Map & Timing</h2>
+                            <p>To start, print out the hiking guide and map. If it’s raining, throw them in a Zip-Lock bag. Read over the guide, study the map, and have a good idea of what to expect. I like to know what my next landmark is as I hike. For example, I’ll read the guide and know that say, in a mile, I make a right turn at the junction..</p>
+                            <button>
+                                <span>read more</span>
+                                <img src="./img/arrow.png" alt="">
+                            </button>
+                        </div>
+                        <img src="./img/01.png" alt="Photo" class="content-img">
+                    </div>
+                    <span class="img03 img001">03</span>
+                </div>
+            </div>
         </section>
     </main>
 
